--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libopencm3"]
 	path = libopencm3
 	url = https://github.com/fishpepper/libopencm3.git
+[submodule "bootloader/libopencm3"]
+	path = bootloader/libopencm3
+	url = https://github.com/fishpepper/libopencm3.git
